# finlib

./: .gitignore  CMakeLists.txt  README.md  requirement.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt  run_tensorboard.py  train.py  train_baseline.py
.github/workflows/: ci.yml  python-ci.yml
cmake/: FetchDependencies.cmake
data/: daily_analysis.csv  raw_spy_1min.csv  spy_1min_filled.csv
docs/: AGENT_PROMPT.md  CLEANUP_MANIFEST.md  CLEANUP_PLAN.md  DUPLICATE_SYMBOLS.txt  ENTRYPOINTS.md  FACTS.md  GIT_TRACKED_FILES.txt  INTEGRATION.md  PAPERS.md  PIPELINE.md  PORTFOLIO.md  REACHABLE_MODULES.txt  REALITY_CHECK.md  RECRUITER_PITCH.md  RESEARCH_METHOD.md  STRATEGIES.md  STRATEGY_RESULTS.md  STRUCTURE.md  UNREACHABLE_MODULES.txt  design.md  ensemble_report.md  insights.md  loss_choice.md  model_capacity.md  profiling.md  qc_report.md
engine/: README.md
engine/python/: bindings.cpp
engine/tests/: CMakeLists.txt  test_american_lsm.cpp  test_black_scholes.cpp  test_exotic_options.cpp  test_greeks.cpp  test_heston.cpp  test_interpolation.cpp  test_mc_european.cpp  test_merton_cir.cpp  test_random.cpp  test_sabr.cpp  test_var.cpp  test_yield_curve.cpp
forecast/: .envrc  .flake8  README.md  requirements-ml.txt
notebooks/: README.md  baseline_analysis.ipynb
scripts/: backtest_baselines.py  backtest_factors.py  backtest_pairs.py  backtest_papers.py  backtest_portfolio.py  backtest_strategies.py  benchmark_pipeline.py  daily_run.py  evaluate_ensemble.py  fill_missing_data.py  make_research_bundle.py  monitor_runs.py  profile_perfomance.py  replay_trade.py  run_demo.py  run_options_demo.py  sweep_momentum.py  walkforward.py  walkforward_demo.py
tests/: test_academic_strategies.py  test_attribution.py  test_backtest_factors.py  test_backtest_reliability.py  test_daily_run.py  test_daily_run_meta.py  test_data_fetcher.py  test_dataset.py  test_ensemble.py  test_execution.py  test_factors.py  test_fdm_solver.cpp  test_features.py  test_gbm_paths.cpp  test_heston.cpp  test_implied_vol.cpp  test_linalg.cpp  test_lstm.py  test_model_variants.py  test_monitor_runs.py  test_multi_fetch.py  test_new_strategies.py  test_paper.py  test_paper_strategies.py  test_pipeline.py  test_portfolio.py  test_regimes.py  test_research_bundle.py  test_retail_strategies.py  test_root_finding.cpp  test_statistics.cpp  test_strategies.py  test_train.py  test_var.cpp  test_walkforward.py  test_weight_learning.py  test_yield_curve.cpp
tools/: repo_audit.py
(+454 files in other folders)
